--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "tslint": "^4.4.2",
     "tslint-loader": "^3.3.0",
     "typescript": "^2.1.5",
-    "webpack": "^2.1.0-beta.25"
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-server": "^1.16.3"
   },
   "dependencies": {
     "@angular/core": "^2.4.5",
